--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,7 +6,19 @@ html(lang="en")
     title Document
     link(rel="stylesheet", href="https://unpkg.com/mvp.css")
   body 
-    h1 Home Page
-    p Welcome to the home page
-    button Click me
+    header 
+      h1 Zoom 
+    n   
+      div#welcome
+        form
+          input(type="text", placeholder="room name", required)
+          button Enter room
+      div#room
+        h3
+        form
+          input(type="text", placeholder="message", required)
+          button Send
+
+    main 
+    script(src='/socket.io/socket.io.js')
     script(src='/public/js/app.js')
