--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,24 +1,20 @@
 doctype html
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-    link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-  body 
-    header 
-      h1 Zoom 
-    n   
-      div#welcome
-        form
-          input(type="text", placeholder="room name", required)
-          button Enter room
-      div#room
-        h3
-        form
-          input(type="text", placeholder="message", required)
-          button Send
-
-    main 
-    script(src='/socket.io/socket.io.js')
-    script(src='/public/js/app.js')
+    head
+        meta(charset="UTF-8")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title Noom
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+    body
+        header
+            h1 Zoom
+        main
+            div#myStream
+                video#myFace(autoplay,playsinline, muted, width="400", height="400")
+                button#mute Mute
+                button#camera Turn Camera Off
+                select#cameras
+                  option(value="device")
+        script(src="/socket.io/socket.io.js") 
+        script(src="/public/js/app.js") 
