--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,17 @@ html(lang="en")
         header
             h1 Zoom
         main
+          div#welcome
+            form
+              input(type="text", id="name", placeholder="Room name")
+              button Enter Room
+          div#call
             div#myStream
                 video#myFace(autoplay,playsinline, muted, width="400", height="400")
                 button#mute Mute
                 button#camera Turn Camera Off
                 select#cameras
                   option(value="device")
+                video#peerFace(autoplay,playsinline, muted, width="400", height="400")
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js") 
